# ShrutiSynth

./: Home.py  README.md  complete_carnatic_generator.py  pyproject.toml
.streamlit/: config.toml
pages/: 02_Education.py  Music_Generator.py
